--- a/Chatbot TextStrings/Chatbot TextStrings.csproj
+++ b/Chatbot TextStrings/Chatbot TextStrings.csproj
@@ -12,7 +12,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PKHeX.Core">
-      <HintPath>..\..\PKHeX\PKHeX.Core\bin\Debug\net46\PKHeX.Core.dll</HintPath>
+      <HintPath>..\..\PKHeX\PKHeX.Core\bin\Debug\netstandard2.0\PKHeX.Core.dll</HintPath>
     </Reference>
     <Reference Include="System.Speech" />
   </ItemGroup>
