--- a/Chatbot TextStrings/Chatbot TextStrings.csproj
+++ b/Chatbot TextStrings/Chatbot TextStrings.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Library</OutputType>
-   <TargetFrameworks>net6.0-windows</TargetFrameworks>
+   <TargetFrameworks>net7.0-windows</TargetFrameworks>
     <UseWindowsForms>true</UseWindowsForms>
     <Authors>Mitsuki.TV</Authors>
     <AssemblyName>Chatbot TextStrings</AssemblyName>
@@ -20,10 +20,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
-  
   <ItemGroup>
     <Reference Include="PKHeX.Core">
-      <HintPath>..\..\PKHeX\PKHeX.Core\bin\Debug\netstandard2.0\PKHeX.Core.dll</HintPath>
+      <HintPath>..\..\PKHeX\PKHeX.Core\bin\Debug\net7.0\PKHeX.Core.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
